--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Malla Interactiva</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Malla Ing. Civil en Electricidad</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Malla Interactiva</h1>
-    <div id="contenedor"></div>
-    <script src="script.js"></script>
+  <h1>Malla Ingeniería Civil en Electricidad - UMAG</h1>
+  <div class="malla">
+    <div class="semestre"><h2>Año 1 - Semestre 1</h2><div class="ramo" data-codigo="RAM001" data-req='[]'>Computación</div><div class="ramo" data-codigo="RAM002" data-req='[]'>Comunicación Efectiva</div><div class="ramo" data-codigo="RAM003" data-req='[]'>Deportes I</div><div class="ramo" data-codigo="RAM004" data-req='[]'>Introducción a la Ingeniería</div><div class="ramo" data-codigo="RAM005" data-req='[]'>Matemática I</div></div><div class="semestre"><h2>Año 1 - Semestre 2</h2><div class="ramo" data-codigo="RAM006" data-req='[]'>Deportes II</div><div class="ramo" data-codigo="RAM007" data-req='["RAM005"]'>Física I</div><div class="ramo" data-codigo="RAM008" data-req='[]'>Ingeniería y Sociedad</div><div class="ramo" data-codigo="RAM009" data-req='["RAM005"]'>Matemática II</div><div class="ramo" data-codigo="RAM010" data-req='["RAM001"]'>Programación de Computadores</div></div><div class="semestre"><h2>Año 2 - Semestre 1</h2><div class="ramo" data-codigo="RAM011" data-req='["RAM007", "RAM009"]'>Física II</div><div class="ramo" data-codigo="RAM012" data-req='["RAM009"]'>Matemática III</div><div class="ramo" data-codigo="RAM013" data-req='[]'>Química General</div><div class="ramo" data-codigo="RAM014" data-req='["RAM005"]'>Redes Eléctricas I</div><div class="ramo" data-codigo="RAM015" data-req='[]'>Tecnología Eléctrica</div></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
