--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <h2>
      1° Semestre
     </h2>
-    <div class="ramo bloqueado" id="computacion" onclick="aprobar('computacion')">
+    <div class="ramo" id="computacion" onclick="aprobar('computacion')">
      Computación
     </div>
-    <div class="ramo bloqueado" id="comunicacion_efectiva" onclick="aprobar('comunicacion_efectiva')">
+    <div class="ramo" id="comunicacion_efectiva" onclick="aprobar('comunicacion_efectiva')">
      Comunicación Efectiva
     </div>
-    <div class="ramo bloqueado" id="deportes_i" onclick="aprobar('deportes_i')">
+    <div class="ramo" id="deportes_i" onclick="aprobar('deportes_i')">
      Deportes I
     </div>
-    <div class="ramo bloqueado" id="introduccion_a_la_ingenieria" onclick="aprobar('introduccion_a_la_ingenieria')">
+    <div class="ramo" id="introduccion_a_la_ingenieria" onclick="aprobar('introduccion_a_la_ingenieria')">
      Introducción a la Ingeniería
     </div>
-    <div class="ramo bloqueado" id="matematica_i" onclick="aprobar('matematica_i')">
+    <div class="ramo" id="matematica_i" onclick="aprobar('matematica_i')">
      Matemática I
     </div>
    </div>
@@ -39,13 +39,13 @@
     <h2>
      2° Semestre
     </h2>
-    <div class="ramo bloqueado" id="deportes_ii" onclick="aprobar('deportes_ii')">
+    <div class="ramo" id="deportes_ii" onclick="aprobar('deportes_ii')">
      Deportes II
     </div>
     <div class="ramo bloqueado" id="fisica_i" onclick="aprobar('fisica_i')">
      Física I
     </div>
-    <div class="ramo bloqueado" id="ingenieria_y_sociedad" onclick="aprobar('ingenieria_y_sociedad')">
+    <div class="ramo" id="ingenieria_y_sociedad" onclick="aprobar('ingenieria_y_sociedad')">
      Ingeniería y Sociedad
     </div>
     <div class="ramo bloqueado" id="matematica_ii" onclick="aprobar('matematica_ii')">
@@ -65,13 +65,13 @@
     <div class="ramo bloqueado" id="matematica_iii" onclick="aprobar('matematica_iii')">
      Matemática III
     </div>
-    <div class="ramo bloqueado" id="quimica_general" onclick="aprobar('quimica_general')">
+    <div class="ramo" id="quimica_general" onclick="aprobar('quimica_general')">
      Química General
     </div>
     <div class="ramo bloqueado" id="redes_electricas_i" onclick="aprobar('redes_electricas_i')">
      Redes Eléctricas I
     </div>
-    <div class="ramo bloqueado" id="tecnologia_electrica" onclick="aprobar('tecnologia_electrica')">
+    <div class="ramo" id="tecnologia_electrica" onclick="aprobar('tecnologia_electrica')">
      Tecnología Eléctrica
     </div>
    </div>
@@ -108,7 +108,7 @@
     <div class="ramo bloqueado" id="ingenieria_electromagnetica" onclick="aprobar('ingenieria_electromagnetica')">
      Ingeniería Electromagnética
     </div>
-    <div class="ramo bloqueado" id="ingles_i_tecnico" onclick="aprobar('ingles_i_tecnico')">
+    <div class="ramo" id="ingles_i_tecnico" onclick="aprobar('ingles_i_tecnico')">
      Inglés I (Técnico)
     </div>
     <div class="ramo bloqueado" id="maquinas_electricas" onclick="aprobar('maquinas_electricas')">
@@ -148,7 +148,7 @@
     <h2>
      7° Semestre
     </h2>
-    <div class="ramo bloqueado" id="economia_y_administracion_de_empresas" onclick="aprobar('economia_y_administracion_de_empresas')">
+    <div class="ramo" id="economia_y_administracion_de_empresas" onclick="aprobar('economia_y_administracion_de_empresas')">
      Economía y Administración de Empresas
     </div>
     <div class="ramo bloqueado" id="electronica_de_potencia_i" onclick="aprobar('electronica_de_potencia_i')">
@@ -157,7 +157,7 @@
     <div class="ramo bloqueado" id="electronica_ii" onclick="aprobar('electronica_ii')">
      Electrónica II
     </div>
-    <div class="ramo bloqueado" id="formacion_de_emprendedores" onclick="aprobar('formacion_de_emprendedores')">
+    <div class="ramo" id="formacion_de_emprendedores" onclick="aprobar('formacion_de_emprendedores')">
      Formación de Emprendedores
     </div>
     <div class="ramo bloqueado" id="laboratorio_electronica" onclick="aprobar('laboratorio_electronica')">
@@ -174,7 +174,7 @@
     <h2>
      8° Semestre
     </h2>
-    <div class="ramo bloqueado" id="comportamiento_organizacional" onclick="aprobar('comportamiento_organizacional')">
+    <div class="ramo" id="comportamiento_organizacional" onclick="aprobar('comportamiento_organizacional')">
      Comportamiento Organizacional
     </div>
     <div class="ramo bloqueado" id="comunicaciones_electronicas" onclick="aprobar('comunicaciones_electronicas')">
@@ -200,7 +200,7 @@
     <div class="ramo bloqueado" id="accionamientos_electricos" onclick="aprobar('accionamientos_electricos')">
      Accionamientos Eléctricos
     </div>
-    <div class="ramo bloqueado" id="control_moderno" onclick="aprobar('control_moderno')">
+    <div class="ramo" id="control_moderno" onclick="aprobar('control_moderno')">
      Control Moderno
     </div>
     <div class="ramo bloqueado" id="electivo_i" onclick="aprobar('electivo_i')">
@@ -209,7 +209,7 @@
     <div class="ramo bloqueado" id="ingenieria_economica" onclick="aprobar('ingenieria_economica')">
      Ingeniería Económica
     </div>
-    <div class="ramo bloqueado" id="ingles_iii" onclick="aprobar('ingles_iii')">
+    <div class="ramo" id="ingles_iii" onclick="aprobar('ingles_iii')">
      Inglés III
     </div>
    </div>
@@ -217,7 +217,7 @@
     <h2>
      10° Semestre
     </h2>
-    <div class="ramo bloqueado" id="control_de_riesgo_operacional" onclick="aprobar('control_de_riesgo_operacional')">
+    <div class="ramo" id="control_de_riesgo_operacional" onclick="aprobar('control_de_riesgo_operacional')">
      Control de Riesgo Operacional
     </div>
     <div class="ramo bloqueado" id="distribucion_y_protecciones" onclick="aprobar('distribucion_y_protecciones')">
@@ -226,7 +226,7 @@
     <div class="ramo bloqueado" id="electivo_ii" onclick="aprobar('electivo_ii')">
      Electivo II
     </div>
-    <div class="ramo bloqueado" id="electivo_iii" onclick="aprobar('electivo_iii')">
+    <div class="ramo" id="electivo_iii" onclick="aprobar('electivo_iii')">
      Electivo III
     </div>
     <div class="ramo bloqueado" id="ingles_iv" onclick="aprobar('ingles_iv')">
@@ -249,13 +249,13 @@
     <div class="ramo bloqueado" id="direccion_de_empresas" onclick="aprobar('direccion_de_empresas')">
      Dirección de Empresas
     </div>
-    <div class="ramo bloqueado" id="electivo_de_titulacion" onclick="aprobar('electivo_de_titulacion')">
+    <div class="ramo" id="electivo_de_titulacion" onclick="aprobar('electivo_de_titulacion')">
      Electivo de Titulación
     </div>
     <div class="ramo bloqueado" id="electivo_iv" onclick="aprobar('electivo_iv')">
      Electivo IV
     </div>
-    <div class="ramo bloqueado" id="gestion_ambiental" onclick="aprobar('gestion_ambiental')">
+    <div class="ramo" id="gestion_ambiental" onclick="aprobar('gestion_ambiental')">
      Gestión Ambiental
     </div>
     <div class="ramo bloqueado" id="plantas_de_energia" onclick="aprobar('plantas_de_energia')">
