--- a/index.html
+++ b/index.html
@@ -3,127 +3,132 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Malla Interactiva Obstetricia UChile – Universidad de Chile</title>
-  <meta name="description" content="Explora la malla curricular interactiva de Obstetricia y Puericultura en la Universidad de Chile. Descubre requisitos por semestre y desbloquea ramos al aprobar.">
+  <title>Malla Interactiva Ingeniería Civil en Electricidad UMAG</title>
+  <meta name="description" content="Explora la malla curricular interactiva de Ingeniería Civil en Electricidad en la UMAG. Descubre requisitos por semestre y desbloquea ramos al aprobar.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="estilos.css" />
 </head>
 
 <body>
-  <h1>Obstetricia y Puericultura UChile</h1>
+  <h1>Ingeniería Civil en Electricidad UMAG</h1>
   <div class="malla-grid">
+    <!-- Año 1 -->
     <div class="semestre" id="sem1">
       <h2>1° Semestre</h2>
-      <div class="ramo" id="fundamentos1" onclick="aprobar('fundamentos1')">Fundamentos de Enfermería I</div>
-      <div class="ramo" id="quimica" onclick="aprobar('quimica')">Química General y Orgánica</div>
-      <div class="ramo" id="biologia" onclick="aprobar('biologia')">Biología Celular y Genética</div>
-      <div class="ramo" id="mate" onclick="aprobar('mate')">Matemáticas</div>
-      <div class="ramo" id="fisica" onclick="aprobar('fisica')">Física</div>
-      <div class="ramo" id="educacion1" onclick="aprobar('educacion1')">Educación en Salud I</div>
-      <div class="ramo" id="cs_sociales1" onclick="aprobar('cs_sociales1')">Cs. Sociales y Salud I</div>
-      <div class="ramo" id="cfg1" onclick="aprobar('cfg1')">Curso de Formación General I</div>
-      <div class="ramo" id="ingles1" onclick="aprobar('ingles1')">Inglés I</div>
+      <div class="ramo" id="computacion" onclick="aprobar('computacion')">Computación (3)</div>
+      <div class="ramo" id="comunicacion" onclick="aprobar('comunicacion')">Comunicación Efectiva (4)</div>
+      <div class="ramo" id="deportes1" onclick="aprobar('deportes1')">Deportes I (2)</div>
+      <div class="ramo" id="introduccion" onclick="aprobar('introduccion')">Introducción a la Ingeniería (4)</div>
+      <div class="ramo" id="matematica1" onclick="aprobar('matematica1')">Matemática I (14)</div>
     </div>
 
     <div class="semestre" id="sem2">
       <h2>2° Semestre</h2>
-      <div class="ramo bloqueado" id="saludcom1" onclick="aprobar('saludcom1')">Salud Comunitaria I</div>
-      <div class="ramo bloqueado" id="bioquimica" onclick="aprobar('bioquimica')">Bioquímica</div>
-      <div class="ramo bloqueado" id="biodesarrollo" onclick="aprobar('biodesarrollo')">Biología del Desarrollo y Embriología Humana</div>
-      <div class="ramo bloqueado" id="fisiologia" onclick="aprobar('fisiologia')">Fisiología General</div>
-      <div class="ramo bloqueado" id="anatomia" onclick="aprobar('anatomia')">Anatomía</div>
-      <div class="ramo bloqueado" id="histologia" onclick="aprobar('histologia')">Histología</div>
-      <div class="ramo bloqueado" id="integracion1" onclick="aprobar('integracion1')">Integración al Desempeño Profesional I</div>
-      <div class="ramo" id="cfg2" onclick="aprobar('cfg2')">Curso de Formación General II</div>
-      <div class="ramo bloqueado" id="ingles2" onclick="aprobar('ingles2')">Inglés II</div>
+      <div class="ramo bloqueado" id="deportes2" onclick="aprobar('deportes2')">Deportes II (2)</div>
+      <div class="ramo bloqueado" id="fisica1" onclick="aprobar('fisica1')">Física I (9) -- Requiere: Matemática I</div>
+      <div class="ramo bloqueado" id="ingenieria_sociedad" onclick="aprobar('ingenieria_sociedad')">Ingeniería y Sociedad (4)</div>
+      <div class="ramo bloqueado" id="matematica2" onclick="aprobar('matematica2')">Matemática II (12) -- Requiere: Matemática I</div>
+      <div class="ramo bloqueado" id="programacion" onclick="aprobar('programacion')">Programación de Computadores (6) -- Requiere: Computación</div>
     </div>
 
+    <!-- Año 2 -->
     <div class="semestre" id="sem3">
       <h2>3° Semestre</h2>
-      <div class="ramo bloqueado" id="fundamentos2" onclick="aprobar('fundamentos2')">Fundamentos de Enfermería II</div>
-      <div class="ramo bloqueado" id="obstetricia1" onclick="aprobar('obstetricia1')">Obstetricia Fisiológica I</div>
-      <div class="ramo bloqueado" id="neonatologia1" onclick="aprobar('neonatologia1')">Neonatología I</div>
-      <div class="ramo bloqueado" id="fisiologia_sis" onclick="aprobar('fisiologia_sis')">Fisiología de Sistemas</div>
-      <div class="ramo bloqueado" id="inmunologia" onclick="aprobar('inmunologia')">Inmunología</div>
-      <div class="ramo bloqueado" id="agentes" onclick="aprobar('agentes')">Agentes Vivos de Enfermedad</div>
-      <div class="ramo bloqueado" id="cs_sociales2" onclick="aprobar('cs_sociales2')">Cs. Sociales y Salud II</div>
-      <div class="ramo bloqueado" id="ingles3" onclick="aprobar('ingles3')">Inglés III</div>
+      <div class="ramo bloqueado" id="fisica2" onclick="aprobar('fisica2')">Física II (9) -- Requiere: Física I, Matemática II</div>
+      <div class="ramo bloqueado" id="matematica3" onclick="aprobar('matematica3')">Matemática III (9) -- Requiere: Matemática II</div>
+      <div class="ramo bloqueado" id="quimica" onclick="aprobar('quimica')">Química General (6)</div>
+      <div class="ramo bloqueado" id="redes1" onclick="aprobar('redes1')">Redes Eléctricas I (4) -- Requiere: Matemática I</div>
+      <div class="ramo bloqueado" id="tecnologia" onclick="aprobar('tecnologia')">Tecnología Eléctrica (3)</div>
     </div>
 
     <div class="semestre" id="sem4">
       <h2>4° Semestre</h2>
-      <div class="ramo bloqueado" id="neonatologia2" onclick="aprobar('neonatologia2')">Neonatología II</div>
-      <div class="ramo bloqueado" id="obstetricia2" onclick="aprobar('obstetricia2')">Obstetricia Fisiológica II</div>
-      <div class="ramo bloqueado" id="gineco1" onclick="aprobar('gineco1')">Ginecología Fisiológica</div>
-      <div class="ramo bloqueado" id="fisiopato" onclick="aprobar('fisiopato')">Fisiopatología</div>
-      <div class="ramo bloqueado" id="infectologia" onclick="aprobar('infectologia')">Infectología</div>
-      <div class="ramo bloqueado" id="farmacologia" onclick="aprobar('farmacologia')">Farmacología</div>
-      <div class="ramo bloqueado" id="integracion2" onclick="aprobar('integracion2')">Integración al Desempeño Profesional II</div>
-      <div class="ramo bloqueado" id="investigacion1" onclick="aprobar('investigacion1')">Investigación en Salud I</div>
+      <div class="ramo bloqueado" id="estadistica" onclick="aprobar('estadistica')">Estadística (6) -- Requiere: Matemática II</div>
+      <div class="ramo bloqueado" id="fisica_electronica" onclick="aprobar('fisica_electronica')">Física Electrónica (3) -- Requiere: Física II</div>
+      <div class="ramo bloqueado" id="fisica3" onclick="aprobar('fisica3')">Física III (6) -- Requiere: Física II, Matemática II</div>
+      <div class="ramo bloqueado" id="matematica4" onclick="aprobar('matematica4')">Matemática IV (6) -- Requiere: Matemática III</div>
+      <div class="ramo bloqueado" id="medidas" onclick="aprobar('medidas')">Medidas Eléctricas (3) -- Requiere: Redes Eléctricas I</div>
+      <div class="ramo bloqueado" id="redes2" onclick="aprobar('redes2')">Redes Eléctricas II (5) -- Requiere: Redes Eléctricas I, Matemática II</div>
     </div>
 
+    <!-- Año 3 -->
     <div class="semestre" id="sem5">
       <h2>5° Semestre</h2>
-      <div class="ramo bloqueado" id="clinica_neonatal1" onclick="aprobar('clinica_neonatal1')">Clínica Neonatal I</div>
-      <div class="ramo bloqueado" id="clinica_partos1" onclick="aprobar('clinica_partos1')">Clínica de Partos I</div>
-      <div class="ramo bloqueado" id="clinica_ap1" onclick="aprobar('clinica_ap1')">Clínica de Atención Primaria I</div>
-      <div class="ramo bloqueado" id="clinica_puerperio" onclick="aprobar('clinica_puerperio')">Clínica de Puerperio</div>
-      <div class="ramo bloqueado" id="clinica_saludcom" onclick="aprobar('clinica_saludcom')">Clínica de Salud Comunitaria</div>
-      <div class="ramo bloqueado" id="modulo1" onclick="aprobar('modulo1')">Módulo Interdisciplinario I</div>
+      <div class="ramo bloqueado" id="calculo" onclick="aprobar('calculo')">Cálculo Numérico (6) -- Requiere: Matemática IV</div>
+      <div class="ramo bloqueado" id="electromagnetica" onclick="aprobar('electromagnetica')">Ingeniería Electromagnética (6) -- Requiere: Física II, Matemática III</div>
+      <div class="ramo bloqueado" id="ingles1" onclick="aprobar('ingles1')">Inglés I (Técnico) (4)</div>
+      <div class="ramo bloqueado" id="maquinas" onclick="aprobar('maquinas')">Máquinas Eléctricas (6) -- Requiere: Redes Eléctricas II, Física II</div>
+      <div class="ramo bloqueado" id="senales" onclick="aprobar('senales')">Señales y Sistemas (6) -- Requiere: Redes Eléctricas II</div>
     </div>
 
     <div class="semestre" id="sem6">
       <h2>6° Semestre</h2>
-      <div class="ramo bloqueado" id="neonatologia3" onclick="aprobar('neonatologia3')">Neonatología III</div>
-      <div class="ramo bloqueado" id="saludcom2" onclick="aprobar('saludcom2')">Salud Comunitaria II</div>
-      <div class="ramo bloqueado" id="obstetricia_pat" onclick="aprobar('obstetricia_pat')">Obstetricia Patológica</div>
-      <div class="ramo bloqueado" id="gestion1" onclick="aprobar('gestion1')">Gestión y Liderazgo en Salud I</div>
-      <div class="ramo bloqueado" id="educacion2" onclick="aprobar('educacion2')">Educación en Salud II</div>
-      <div class="ramo bloqueado" id="investigacion2" onclick="aprobar('investigacion2')">Investigación en Salud II</div>
-      <div class="ramo bloqueado" id="cs_sociales3" onclick="aprobar('cs_sociales3')">Cs. Sociales y Salud III</div>
-      <div class="ramo" id="cfg3" onclick="aprobar('cfg3')">Curso de Formación General III</div>
+      <div class="ramo bloqueado" id="control" onclick="aprobar('control')">Control Automático (5) -- Requiere: Señales y Sistemas</div>
+      <div class="ramo bloqueado" id="electronica1" onclick="aprobar('electronica1')">Electrónica I (4) -- Requiere: Redes Eléctricas I</div>
+      <div class="ramo bloqueado" id="ingles2" onclick="aprobar('ingles2')">Inglés II (4) -- Requiere: Inglés I</div>
+      <div class="ramo bloqueado" id="lab_maquinas" onclick="aprobar('lab_maquinas')">Lab. Máquinas Eléctricas (4) -- Requiere: Medidas Eléctricas, Máquinas Eléctricas</div>
+      <div class="ramo bloqueado" id="programacion_avanzada" onclick="aprobar('programacion_avanzada')">Programación Avanzada (5) -- Requiere: Programación de Computadores</div>
+      <div class="ramo bloqueado" id="sistemas_potencia1" onclick="aprobar('sistemas_potencia1')">Sistemas de Potencia I (5) -- Requiere: Ingeniería Electromagnética, Máquinas Eléctricas</div>
+      <div class="ramo bloqueado" id="sistemas_digitales" onclick="aprobar('sistemas_digitales')">Sistemas Digitales (6) -- Requiere: Medidas Eléctricas, Matemática I</div>
     </div>
 
+    <!-- Año 4 -->
     <div class="semestre" id="sem7">
       <h2>7° Semestre</h2>
-      <div class="ramo bloqueado" id="enfermeria_mq" onclick="aprobar('enfermeria_mq')">Enfermería Médico Quirúrgica</div>
-      <div class="ramo bloqueado" id="reproduccion" onclick="aprobar('reproduccion')">Reproducción Humana</div>
-      <div class="ramo bloqueado" id="gineco_pat" onclick="aprobar('gineco_pat')">Ginecología Patológica</div>
-      <div class="ramo bloqueado" id="gestion2" onclick="aprobar('gestion2')">Gestión y Liderazgo en Salud II</div>
-      <div class="ramo bloqueado" id="investigacion3" onclick="aprobar('investigacion3')">Investigación en Salud III</div>
-      <div class="ramo bloqueado" id="cs_sociales4" onclick="aprobar('cs_sociales4')">Cs. Sociales y Salud IV</div>
-      <div class="ramo" id="cfg4" onclick="aprobar('cfg4')">Curso de Formación General IV</div>
-      <div class="ramo bloqueado" id="ingles4" onclick="aprobar('ingles4')">Inglés IV</div>
+      <div class="ramo bloqueado" id="economia" onclick="aprobar('economia')">Economía y Administración (4)</div>
+      <div class="ramo bloqueado" id="electronica_potencia1" onclick="aprobar('electronica_potencia1')">Electrónica de Potencia I (6) -- Requiere: Electrónica I</div>
+      <div class="ramo bloqueado" id="electronica2" onclick="aprobar('electronica2')">Electrónica II (4) -- Requiere: Electrónica I</div>
+      <div class="ramo bloqueado" id="emprendedores" onclick="aprobar('emprendedores')">Formación de Emprendedores (2)</div>
+      <div class="ramo bloqueado" id="lab_electronica" onclick="aprobar('lab_electronica')">Laboratorio Electrónica (4) -- Requiere: Electrónica I</div>
+      <div class="ramo bloqueado" id="microprocesadores" onclick="aprobar('microprocesadores')">Microprocesadores (4) -- Requiere: Sistemas Digitales</div>
+      <div class="ramo bloqueado" id="sistemas_potencia2" onclick="aprobar('sistemas_potencia2')">Sistemas de Potencia II (6) -- Requiere: Sistemas de Potencia I</div>
     </div>
 
     <div class="semestre" id="sem8">
       <h2>8° Semestre</h2>
-      <div class="ramo bloqueado" id="clinica_neonatal2" onclick="aprobar('clinica_neonatal2')">Clínica Neonatal II</div>
-      <div class="ramo bloqueado" id="clinica_partos2" onclick="aprobar('clinica_partos2')">Clínica de Partos II</div>
-      <div class="ramo bloqueado" id="clinica_ap2" onclick="aprobar('clinica_ap2')">Clínica Atención Primaria II</div>
-      <div class="ramo bloqueado" id="alto_riesgo" onclick="aprobar('alto_riesgo')">Clínica Alto Riesgo Obstétrico</div>
-      <div class="ramo bloqueado" id="clinica_mq" onclick="aprobar('clinica_mq')">Clínica de Enfermería MQ</div>
-      <div class="ramo bloqueado" id="modulo2" onclick="aprobar('modulo2')">Módulo Interdisciplinario II</div>
+      <div class="ramo bloqueado" id="comportamiento" onclick="aprobar('comportamiento')">Comportamiento Organizacional (3)</div>
+      <div class="ramo bloqueado" id="comunicaciones" onclick="aprobar('comunicaciones')">Comunicaciones Electrónicas (6) -- Requiere: Electrónica II, Señales y Sistemas, Ingeniería Electromagnética</div>
+      <div class="ramo bloqueado" id="control_digital" onclick="aprobar('control_digital')">Control Digital (6) -- Requiere: Control Automático, Microprocesadores</div>
+      <div class="ramo bloqueado" id="electronica_potencia2" onclick="aprobar('electronica_potencia2')">Electrónica de Potencia II (6) -- Requiere: Máquinas Eléctricas, Electrónica de Potencia I</div>
+      <div class="ramo bloqueado" id="investigacion" onclick="aprobar('investigacion')">Investigación Operativa (4) -- Requiere: Cálculo Numérico</div>
+      <div class="ramo bloqueado" id="lab_micro" onclick="aprobar('lab_micro')">Lab. de Microcomputadores (5) -- Requiere: Microprocesadores, Lab. Electrónica</div>
     </div>
 
+    <!-- Año 5 -->
     <div class="semestre" id="sem9">
       <h2>9° Semestre</h2>
-      <div class="ramo bloqueado" id="internado_neonatologia" onclick="aprobar('internado_neonatologia')">Internado Neonatología</div>
-      <div class="ramo bloqueado" id="internado_obstetricia" onclick="aprobar('internado_obstetricia')">Internado Obstetricia</div>
-      <div class="ramo bloqueado" id="internado_ap" onclick="aprobar('internado_ap')">Internado Atención Primaria</div>
-      <div class="ramo bloqueado" id="internado_gineco" onclick="aprobar('internado_gineco')">Internado Ginecología</div>
-      <div class="ramo bloqueado" id="internado_electivo" onclick="aprobar('internado_electivo')">Internado Electivo</div>
-      <div class="ramo bloqueado" id="seminario1" onclick="aprobar('seminario1')">Seminario Unidad Investigación I</div>
+      <div class="ramo bloqueado" id="accionamientos" onclick="aprobar('accionamientos')">Accionamientos Eléctricos (7) -- Requiere: Electrónica de Potencia I, Lab. Máquinas Eléctricas, Control Automático</div>
+      <div class="ramo bloqueado" id="control_moderno" onclick="aprobar('control_moderno')">Control Moderno (6)</div>
+      <div class="ramo bloqueado" id="electivo1" onclick="aprobar('electivo1')">Electivo I (5)</div>
+      <div class="ramo bloqueado" id="ingenieria_economica" onclick="aprobar('ingenieria_economica')">Ingeniería Económica (4) -- Requiere: Economía y Administración</div>
+      <div class="ramo bloqueado" id="ingles3" onclick="aprobar('ingles3')">Inglés III (4)</div>
     </div>
 
     <div class="semestre" id="sem10">
       <h2>10° Semestre</h2>
-      <div class="ramo bloqueado" id="internado_neonatologia1" onclick="aprobar('internado_neonatologia1')">Internado Neonatología</div>
-      <div class="ramo bloqueado" id="internado_obstetricia1" onclick="aprobar('internado_obstetricia1')">Internado Obstetricia</div>
-      <div class="ramo bloqueado" id="internado_ap1" onclick="aprobar('internado_ap1')">Internado Atención Primaria</div>
-      <div class="ramo bloqueado" id="internado_gineco1" onclick="aprobar('internado_gineco1')">Internado Ginecología</div>
-      <div class="ramo bloqueado" id="internado_electivo1" onclick="aprobar('internado_electivo1')">Internado Electivo</div>
-      <div class="ramo bloqueado" id="seminario2" onclick="aprobar('seminario2')">Seminario Unidad Investigación II</div>
+      <div class="ramo bloqueado" id="control_riesgo" onclick="aprobar('control_riesgo')">Control de Riesgo Operacional (2)</div>
+      <div class="ramo bloqueado" id="distribucion" onclick="aprobar('distribucion')">Distribución y Protecciones (6) -- Requiere: Sistemas de Potencia II</div>
+      <div class="ramo bloqueado" id="electivo2" onclick="aprobar('electivo2')">Electivo II (5)</div>
+      <div class="ramo bloqueado" id="electivo3" onclick="aprobar('electivo3')">Electivo III (5)</div>
+      <div class="ramo bloqueado" id="ingles4" onclick="aprobar('ingles4')">Inglés IV (4) -- Requiere: Inglés III</div>
+      <div class="ramo bloqueado" id="instrumentacion" onclick="aprobar('instrumentacion')">Instrumentación Industrial (6) -- Requiere: Microprocesadores, Electrónica II</div>
+      <div class="ramo bloqueado" id="proyectos" onclick="aprobar('proyectos')">Preparación de Proyectos (4) -- Requiere: Ingeniería Económica</div>
+    </div>
+
+    <!-- Año 6 -->
+    <div class="semestre" id="sem11">
+      <h2>11° Semestre</h2>
+      <div class="ramo bloqueado" id="automatas" onclick="aprobar('automatas')">Autómatas Programables (6) -- Requiere: Lab. de Microcomputadores, Accionamientos Eléctricos</div>
+      <div class="ramo bloqueado" id="direccion" onclick="aprobar('direccion')">Dirección de Empresas (4) -- Requiere: Preparación de Proyectos</div>
+      <div class="ramo bloqueado" id="electivo_titulacion" onclick="aprobar('electivo_titulacion')">Electivo de Titulación (5)</div>
+      <div class="ramo bloqueado" id="electivo4" onclick="aprobar('electivo4')">Electivo IV (3) -- Requiere: Electivo III</div>
+      <div class="ramo bloqueado" id="gestion" onclick="aprobar('gestion')">Gestión Ambiental (4)</div>
+      <div class="ramo bloqueado" id="plantas" onclick="aprobar('plantas')">Plantas de Energía (6) -- Requiere: Electrónica de Potencia I</div>
+    </div>
+
+    <div class="semestre" id="sem12">
+      <h2>12° Semestre</h2>
+      <div class="ramo bloqueado" id="trabajo_titulo" onclick="aprobar('trabajo_titulo')">Trabajo de Título (30) -- Requiere: Electivo I, Control Moderno, Inglés III</div>
     </div>
   </div>
 
